--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -1,10 +1,19 @@
-{% extends base.html %}
+{% extends 'base.html' %}
 {% block title %}
     Cart
 {% endblock %}
 {% block content %}
-    <h1>{{ User }}'s cart:</h1>
+    <h1>Your cart:</h1>
     <ul class="list-group">
-        {% for item in items %}<li class="list-group-item"> {{ item }} </li>{% endfor %}
+        {% for item in item_list %}<li class="list-group-item"> {{ item }} </li>{% endfor %}
     </ul>
+    {% if total > 0 %}
+    <h2>Total:</h2> <br>
+    <h2>{{ total }}$</h2>
+
+
+    <form method="post"> {% csrf_token %} <button class="btn btn-primary">Buy!</button></form>
+    {% else %}
+        <h2>Whoops, your cart is empty! </h2>
+    {% endif %}
 {% endblock %}
