--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link">Home</a></li>
-                <li class="nav-item"><a class="nav-link">Admin</a></li>
-                <li class="nav-item"><a class="nav-link">Your Stuff</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url "Home" %}">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url "Personal" %}">Your Stuff</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url "Login" %}">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url "Cart" %}">Cart</a></li>
              </ul>
         </div>
     </nav>
