--- a/templates/personal.html
+++ b/templates/personal.html
@@ -4,5 +4,15 @@
     Home
 {% endblock %}
 {% block content %}
-    <h2>Welcome to your personal page</h2>
+    <h2>Welcome to your personal page, {{ username }}</h2>
+    <h2>Name: {{ name }}</h2>
+    <h3><href url="{% url "Cart" %}">Cart: </href></h3>
+    <ul class="list-group">
+        {% for item in cart %}<li class="list-group-item"><a href="{{ item.get_absolute_url }}"> {{ item }}</a> </li>{% endfor %}
+    </ul>
+
+    <h3>Order history: </h3>
+    <ul class="list-group">
+        {% for item in order_history %}<li class="list-group-item"><a href="{{ item.get_absolute_url }}"> {{ item }}</a> </li>{% endfor %}
+    </ul>
 {% endblock %}
